Bug 44959: Allow overlay heading title to span 2 lines
As raised in bug 44959,
In some languages it is not 1 line. This fixes up the header so that
the padding belongs to the header itself meaning the title will never
overlap the 'hamburger' left menu button

e.g. Special:Mobileoptions

See
https://translatewiki.net/wiki/Thread:Support/About_MediaWiki:Mobile-frontend-main-menu-settings-heading/en

--- a/less/common/ui.less
+++ b/less/common/ui.less
@@ -16,7 +16,6 @@
 	border-bottom: 1px solid #e2e2e2;
 	line-height: @headerHeight;
 	text-align: center;
-	padding: 0;
 	min-height: @headerHeight;
 	margin: 0;
 	overflow: hidden;
@@ -26,6 +25,11 @@
 		line-height: @headerHeight;
 		margin: 0;
 	}
+}
+
+.mw-mf-overlay .header .search-box,
+#mw-mf-header {
+	padding: 0 @searchBarPaddingRight 0 @searchBarPaddingLeft;
 }
 
 /* Menu buttons */
@@ -94,7 +98,6 @@ input.searchSubmit {
 }
 
 .search-box {
-	padding: 0 @searchBarPaddingRight 0 @searchBarPaddingLeft;
 	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
